--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
 	"version": "1.0.0",
 	"main": "src/server.ts",
 	"engines": {
-		"node": "19"
+		"node": "14"
 	},
 	"scripts": {
 		"dev": "nodemon src/server.ts",
 		"build": "tsc",
 		"migrate": "prisma migrate dev",
-		"start": "node dist/server.js"
+		"start": "node src/server.ts"
 	},
 	"keywords": [],
 	"author": "",
