--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
 	"name": "appproducts",
 	"version": "1.0.0",
 	"main": "src/server.ts",
+	"type": "module",
 	"engines": {
-		"node": "18"
+		"node": "19"
 	},
 	"scripts": {
 		"dev": "nodemon src/server.ts",
