--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"dev": "nodemon src/server.ts",
 		"build": "tsc",
 		"migrate": "prisma migrate dev",
-		"start": "node src/server.ts"
+		"start": "node dist/server.js"
 	},
 	"keywords": [],
 	"author": "",
